# StockAnalyzer

./: AUTHORS  CMakeLists.txt  Makefile  README.md
resources/: DAX_30_historical_data_fake.csv
src/: BuyAndHoldRandomStrategy.h  CMakeLists.txt  Coordinator.h  Evaluator.h  Portfolio.cpp  Portfolio.h  PortfolioDevelopment.h  RandomStrategy.cpp  RandomStrategy.h  StockData.cpp  StockData.h  StockDataPoint.cpp  StockDataPoint.h  StockOrder.cpp  StockOrder.h  Strategy.h  Utility.h  main.cxx
tools/share/cmake/: CxxFlags.cmake
